# usvg-dart

./: .gitattributes  .gitignore  CHANGELOG.md  LICENSE  README.md  flutter_rust_bridge.yaml  lefthook.yml  pubspec.yaml
.github/: dependabot.yml
.github/workflows/: ci.yml  publish.yml  release.yml
doc/: web-wasm-assets.md
docs/: web-wasm-assets.md
example/: usvg_dart_example.dart
hook/: build.dart
lib/: usvg_dart.dart
lib/src/: default_external_library_io.dart  default_external_library_stub.dart  default_external_library_web.dart  native_asset_io.dart  native_asset_stub.dart  usvg_rust_lib.dart  web_wasm_assets.dart
lib/src/rust/: api.dart  frb_generated.dart  frb_generated.io.dart  frb_generated.web.dart
rust/: .gitignore  Cargo.toml  rust-toolchain.toml  rustfmt.toml
rust/src/: api.rs  frb_generated.rs  lib.rs
scripts/: generate_web_wasm_assets.dart
test/: font_test_data.dart  font_test_data_io.dart  font_test_data_stub.dart  font_test_data_web.dart  usvg_dart_test.dart  web_initializer_test.dart
test/fonts/: README.md
