[package]
name = "usvg_dart_rust"
version = "0.1.0"
edition = "2024"
publish = false

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
flutter_rust_bridge = "=2.12.0"
usvg = { path = "../../resvg/crates/usvg" }

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ["cfg(frb_expand)"] }
